package.json 변경 -> npm run generate:api 스크립트 템플릿 적용되도록 변경.

--- a/gardening_front/package.json
+++ b/gardening_front/package.json
@@ -8,7 +8,7 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "generate:api": "openapi-generator-cli generate -i http://localhost:8081/v3/api-docs -g typescript-axios -o src/shared/api"
+    "generate:api": "openapi-generator-cli generate -i http://localhost:8081/v3/api-docs -g typescript-axios -o src/shared/api -t src/shared/api/openapi-templates"
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.4",
