--- a/gardening_back/src/main/resources/application.properties
+++ b/gardening_back/src/main/resources/application.properties
@@ -9,13 +9,58 @@ spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 mybatis.mapper-locations=classpath:mappers/**/*-mapper.xml
 mybatis.configuration.map-underscore-to-camel-case=true
-
+spring.jackson.time-zone=Asia/Seoul
 mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 
 logging.level.org.springframework.security=DEBUG
 
-jwt.expiration=86400
-jwt.secret=${SECRET_KEY}
-
 spring.cloud.gcp.credentials.location=classpath:learned-acronym-477801-k0-09d5fda514df.json
 spring.cloud.gcp.storage.bucket =ggirickggirick
+
+
+cors.allowed-origins=${ALLOWED_ORIGINS}
+
+jwt.access-expiration=1800
+jwt.refresh-expiration=1209600
+jwt.secret=${SECRET_KEY}
+
+logging.level.com.ggirick.mygardening.securitytoken.mapper=DEBUG
+logging.level.org.mybatis=DEBUG
+logging.level.org.springframework.web.client.RestTemplate=DEBUG
+logging.level.org.springframework.http.converter.json=DEBUG
+logging.level.org.apache.http.wire=DEBUG
+logging.level.org.apache.http=DEBUG
+
+spring.profiles.include=oauth
+
+# Kakao OAuth2 Registration
+spring.security.oauth2.client.registration.kakao.client-id=${KAKAO_REST_API_KEY}
+
+spring.security.oauth2.client.registration.kakao.redirect-uri=http://10.5.5.1:8081/login/oauth2/code/kakao
+spring.security.oauth2.client.registration.kakao.scope=profile_nickname,account_email
+spring.security.oauth2.client.registration.kakao.client-name=Kakao
+spring.security.oauth2.client.registration.kakao.authorization-grant-type=authorization_code
+
+spring.security.oauth2.client.provider.kakao.authorization-uri=https://kauth.kakao.com/oauth/authorize
+spring.security.oauth2.client.provider.kakao.token-uri=https://kauth.kakao.com/oauth/token
+spring.security.oauth2.client.provider.kakao.user-info-uri=https://kapi.kakao.com/v2/user/me
+spring.security.oauth2.client.provider.kakao.user-name-attribute=id
+
+spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
+spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_SECRET}
+spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:8081/login/oauth2/code/google
+spring.security.oauth2.client.registration.google.scope=profile,email
+spring.security.oauth2.client.registration.google.client-name=Google
+
+
+spring.security.oauth2.client.registration.naver.client-id=${NAVER_CLIENT_ID}
+spring.security.oauth2.client.registration.naver.client-secret=${NAVER_CLIENT_SECRET}
+spring.security.oauth2.client.registration.naver.redirect-uri=http://localhost:8081/login/oauth2/code/naver
+spring.security.oauth2.client.registration.naver.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.naver.scope=name,email
+spring.security.oauth2.client.registration.naver.client-name=Naver
+
+spring.security.oauth2.client.provider.naver.authorization-uri=https://nid.naver.com/oauth2.0/authorize
+spring.security.oauth2.client.provider.naver.token-uri=https://nid.naver.com/oauth2.0/token
+spring.security.oauth2.client.provider.naver.user-info-uri=https://openapi.naver.com/v1/nid/me
+spring.security.oauth2.client.provider.naver.user-name-attribute=response
